--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
 		<link rel="stylesheet" href="/css/global.css" />
 		<link rel="stylesheet" href="/css/index.css" />
 		<script src="https://kit.fontawesome.com/fecd9f1338.js" crossorigin="anonymous"></script>
+		<!-- Hotjar Tracking Code for Project exam 1 -->
+		<script>
+			(function (h, o, t, j, a, r) {
+				h.hj =
+					h.hj ||
+					function () {
+						(h.hj.q = h.hj.q || []).push(arguments);
+					};
+				h._hjSettings = { hjid: 3225932, hjsv: 6 };
+				a = o.getElementsByTagName("head")[0];
+				r = o.createElement("script");
+				r.async = 1;
+				r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+				a.appendChild(r);
+			})(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+		</script>
 		<!-- Google fonts -->
 		<title>Homepage</title>
 	</head>
