--- a/html/bloglist.html
+++ b/html/bloglist.html
@@ -43,7 +43,18 @@
 				<a href="/html/contact.html" class="nav_link">Contact</a>
 			</div>
 		</nav>
-		<main></main>
+		<main>
+			<div class="search">
+				<h1>Archive of Goldy</h1>
+				<p>Scroll down to se many of Goldys adventures</p>
+				<input type="search" id="search_input" />
+				<button class="search_button" id="search_button">Filter</button>
+			</div>
+			<div class="blogList"></div>
+			<div class="more">
+				<button id="more">More</button>
+			</div>
+		</main>
 		<footer>
 			<img src="/pictures/grilanddog.PNG" alt="icon of dog and owner" />
 			<div class="backTop">
@@ -52,5 +63,6 @@
 			</div>
 		</footer>
 		<script src="/javascript/global.js"></script>
+		<script src="/javascript/bloglist.js"></script>
 	</body>
 </html>
