Specific blog post and started on homepage

--- a/html/specificblog.html
+++ b/html/specificblog.html
@@ -37,20 +37,25 @@
 				<span class="bar"></span>
 			</div>
 			<div class="nav_list">
-				<a href="/index.html" class="nav_link"><b>Home</b></a>
+				<a href="/index.html" class="nav_link">Home</a>
 				<a href="/html/About.html" class="nav_link">About</a>
 				<a href="/html/bloglist.html" class="nav_link">Archive</a>
 				<a href="/html/contact.html" class="nav_link">Contact</a>
 			</div>
 		</nav>
-		<main></main>
+		<main>
+			<div class="container" id="container"></div>
+		</main>
 		<footer>
-			<img src="/pictures/grilanddog.PNG" alt="icon of dog and owner" />
+			<div class="img_footer">
+				<img src="/pictures/grilanddog.PNG" alt="icon of dog and owner" />
+			</div>
 			<div class="backTop">
 				<a href="#"><i class="fa-sharp fa-solid fa-angles-up"></i></a>
 				<p>Back to top</p>
 			</div>
 		</footer>
 		<script src="/javascript/global.js"></script>
+		<script src="/javascript/specificblog.js"></script>
 	</body>
 </html>
