--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 			<section>
 				<h3>Latest posts</h3>
 				<div class="latest_post"></div>
+				<div class="swiper-button-prev"><i class="fa-sharp fa-solid fa-chevron-left"></i></div>
+				<div class="swiper-button-next"><i class="fa-sharp fa-solid fa-chevron-right"></i></div>
 			</section>
 		</main>
 		<footer>
