--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 				<i class="fa-light fa-bone"></i>
 				<i class="fa-light fa-bone"></i>
 			</section>
-			<section>
+			<section class="slideshow">
 				<h3>Latest posts</h3>
-				<div class="latest_post"></div>
-				<div class="swiper-button-prev"><i class="fa-sharp fa-solid fa-chevron-left"></i></div>
-				<div class="swiper-button-next"><i class="fa-sharp fa-solid fa-chevron-right"></i></div>
+				<div class="latest_post" id="latest_post"></div>
+				<div class="swiper-button-prev slide-arrow"><i class="fa-sharp fa-solid fa-chevron-left"></i></div>
+				<div class="swiper-button-next slide-arrow"><i class="fa-sharp fa-solid fa-chevron-right"></i></div>
 			</section>
 		</main>
 		<footer>
