About page update

--- a/html/About.html
+++ b/html/About.html
@@ -46,29 +46,20 @@
 		<main>
 			<div class="profile_container">
 				<section class="profile_picture">
-					<h1>Goldy</h1>
-					<img src="/pictures/about3.png" alt="Profile picture of Goldy" />
+					<div class="profile_title"></div>
+					<div class="profile_image"></div>
 				</section>
 				<section class="description">
 					<div class="profile">
-						<h2>Profile</h2>
-						<ul>
-							<li><b>Name:</b> Goldy</li>
-							<li><b>Age:</b> 5 years old</li>
-							<li><b>Gender:</b> Good girl</li>
-							<li><b>From:</b> Stavanger</li>
-						</ul>
+						<div class="title_profile"></div>
+						<div class="list"></div>
 						<div class="bones">
 							<hr />
 							<i class="fa-solid fa-bone"></i>
 						</div>
 					</div>
 					<div class="about_me">
-						<h2>About me</h2>
-						<p>
-							Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nemo laboriosam vel veritatis molestias. Officia modi fugit tempora dolor
-							facilis porro vero aliquid nemo illo necessitatibus, minus incidunt! Tempore, et?
-						</p>
+						<div class="about_me_container"></div>
 						<div class="bones">
 							<hr />
 							<i class="fa-solid fa-bone"></i>
@@ -87,5 +78,6 @@
 			</div>
 		</footer>
 		<script src="/javascript/global.js"></script>
+		<script src="/javascript/about.js"></script>
 	</body>
 </html>
