--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 				<div class="swiper-button-prev slide-arrow"><i class="fa-sharp fa-solid fa-chevron-left"></i></div>
 				<div class="swiper-button-next slide-arrow"><i class="fa-sharp fa-solid fa-chevron-right"></i></div>
 			</section>
+			<section class="favorites" id="favorites">
+				<h3>Goldy's favorite</h3>
+			</section>
 		</main>
 		<footer>
 			<div class="img_footer">
