--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 			</div>
 		</nav>
 		<header>
-			<h1>Goldy, The golden retriever</h1>
+			<div class="header"></div>
 			<i class="fa-solid fa-paw"></i>
 		</header>
-		<img src="/pictures/home_page.png" alt="The golden retriever Goldy standing on stones" class="home_page" />
+		<div class="image_header"></div>
 		<main>
 			<section class="slogan">
-				<h2>Explore together with Goldy</h2>
+				<div class="slogan_title"></div>
 				<i class="fa-light fa-bone"></i>
 				<i class="fa-light fa-bone"></i>
 				<i class="fa-light fa-bone"></i>
