--- a/html/bloglist.html
+++ b/html/bloglist.html
@@ -56,7 +56,9 @@
 			</div>
 		</main>
 		<footer>
-			<img src="/pictures/grilanddog.PNG" alt="icon of dog and owner" />
+			<div class="img_footer">
+				<div class="bottom_img"></div>
+			</div>
 			<div class="backTop">
 				<a href="#"><i class="fa-sharp fa-solid fa-angles-up"></i></a>
 				<p>Back to top</p>
