--- a/html/contact.html
+++ b/html/contact.html
@@ -87,7 +87,7 @@
 		</main>
 		<footer>
 			<div class="img_footer">
-				<img src="/pictures/grilanddog.PNG" alt="icon of dog and owner" />
+				<div class="bottom_img"></div>
 			</div>
 			<div class="backTop">
 				<a href="#"><i class="fa-sharp fa-solid fa-angles-up"></i></a>
