--- a/html/bloglist.html
+++ b/html/bloglist.html
@@ -48,7 +48,7 @@
 				<h1>Archive of Goldy</h1>
 				<p>Scroll down to se many of Goldys adventures</p>
 				<input type="search" id="search_input" />
-				<button class="search_button" id="search_button">Filter</button>
+				<button class="search_button" id="search_button">Search</button>
 			</div>
 			<div class="blogList"></div>
 			<div class="more">
