--- a/html/contact.html
+++ b/html/contact.html
@@ -54,7 +54,7 @@
 				<div class="formInput">
 					<label>
 						Full name (minimum 5 characters)
-						<input name="fullName" id="fullName" />
+						<input name="FullName" id="fullName" />
 					</label>
 					<div class="form-error" id="fullNameError">Please enter your name at least 5 characters</div>
 				</div>
@@ -62,7 +62,7 @@
 				<div class="formInput">
 					<label>
 						Email (required)
-						<input name="email" id="email" />
+						<input name="Email" id="email" />
 					</label>
 					<div class="form-error" id="emailError">Please enter a valid email address</div>
 				</div>
@@ -70,7 +70,7 @@
 				<div class="formInput">
 					<label>
 						Subject (minimum 15 characters)
-						<input name="subject" id="subject" />
+						<input name="Subject" id="subject" />
 					</label>
 					<div class="form-error" id="subjectError">Your subject must be at least 15 characters</div>
 				</div>
