--- a/html/specificblog.html
+++ b/html/specificblog.html
@@ -44,7 +44,23 @@
 			</div>
 		</nav>
 		<main>
-			<div class="container" id="container"></div>
+			<div class="container" id="container">
+				<div class="comments_container">
+					<h3>Comments</h3>
+					<div class="form-group">
+						<div class="textSaved">
+							<div class="comments"></div>
+						</div>
+						<div class="comment-form">
+							<label for="phone-pin">Add comment below</label>
+							<br />
+							<textarea type="text" class="form-control" id="text-area-first" name="text-area-first" required placeholder="text"></textarea>
+							<br />
+							<button class="store" id="store" onclick="store()">Comment</button>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 		<footer>
 			<div class="img_footer">
