--- a/html/specificblog.html
+++ b/html/specificblog.html
@@ -56,7 +56,9 @@
 							<br />
 							<textarea type="text" class="form-control" id="text-area-first" name="text-area-first" required placeholder="text"></textarea>
 							<br />
-							<button class="store" id="store" onclick="store()">Comment</button>
+							<div class="button">
+								<button class="store" id="store" onclick="store()">Comment</button>
+							</div>
 						</div>
 					</div>
 				</div>
