--- a/html/specificblog.html
+++ b/html/specificblog.html
@@ -54,7 +54,7 @@
 						<div class="comment-form">
 							<label for="phone-pin">Add comment below</label>
 							<br />
-							<textarea type="text" class="form-control" id="text-area-first" name="text-area-first" required placeholder="text"></textarea>
+							<textarea type="text" class="form-control" id="text-area-first" name="text-area-first" required placeholder="Text..."></textarea>
 							<br />
 							<div class="button">
 								<button class="store" id="store" onclick="store()">Comment</button>
