--- a/html/contact.html
+++ b/html/contact.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Contact form page" />
 		<link rel="stylesheet" href="/css/global.css" />
 		<link rel="stylesheet" href="/css/contact.css" />
 		<script src="https://kit.fontawesome.com/fecd9f1338.js" crossorigin="anonymous"></script>
