--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Home page" />
 		<link rel="stylesheet" href="/css/global.css" />
 		<link rel="stylesheet" href="/css/index.css" />
 		<script src="https://kit.fontawesome.com/fecd9f1338.js" crossorigin="anonymous"></script>
@@ -70,7 +71,7 @@
 				<div class="bottom_img"></div>
 			</div>
 			<div class="backTop">
-				<a href="#"><i class="fa-sharp fa-solid fa-angles-up"></i></a>
+				<a href="#" text="Back to top"><i class="fa-sharp fa-solid fa-angles-up"></i></a>
 				<p>Back to top</p>
 			</div>
 		</footer>
