Lighthouse mainly bloglist

--- a/html/bloglist.html
+++ b/html/bloglist.html
@@ -48,7 +48,7 @@
 			<div class="search">
 				<h1>Archive of Goldy</h1>
 				<p>Scroll down to se many of Goldys adventures</p>
-				<input type="search" id="search_input" />
+				<input type="search" id="search_input" placeholder=" Search..." name="search" />
 				<button class="search_button" id="search_button">Search</button>
 			</div>
 			<div class="blogList"></div>
@@ -61,7 +61,7 @@
 				<div class="bottom_img"></div>
 			</div>
 			<div class="backTop">
-				<a href="#"><i class="fa-sharp fa-solid fa-angles-up"></i></a>
+				<a href="#" text="Back to top"><i class="fa-sharp fa-solid fa-angles-up"></i></a>
 				<p>Back to top</p>
 			</div>
 		</footer>
