--- a/html/specificblog.html
+++ b/html/specificblog.html
@@ -70,7 +70,7 @@
 				<div class="bottom_img"></div>
 			</div>
 			<div class="backTop">
-				<a href="#" text="Back to top"><i class="fa-sharp fa-solid fa-angles-up"></i></a>
+				<a href="#" title="Back to top"><i class="fa-sharp fa-solid fa-angles-up"></i></a>
 				<p>Back to top</p>
 			</div>
 		</footer>
