--- a/html/About.html
+++ b/html/About.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="About Goldy" />
+		<meta name="description" content="The page about Goldy" />
 		<link rel="stylesheet" href="/css/global.css" />
 		<link rel="stylesheet" href="/css/about.css" />
 		<script src="https://kit.fontawesome.com/fecd9f1338.js" crossorigin="anonymous"></script>
