--- a/html/specificblog.html
+++ b/html/specificblog.html
@@ -53,9 +53,9 @@
 							<div class="comments"></div>
 						</div>
 						<div class="comment-form">
-							<label for="phone-pin">Add comment below</label>
+							<label for="text-area-first">Add comment below</label>
 							<br />
-							<textarea type="text" class="form-control" id="text-area-first" name="text-area-first" required placeholder="Text..."></textarea>
+							<textarea class="form-control" id="text-area-first" name="text-area-first" required placeholder="Text..."></textarea>
 							<br />
 							<div class="button">
 								<button class="store" id="store" onclick="store()">Comment</button>
