Modal on specific pages

--- a/html/specificblog.html
+++ b/html/specificblog.html
@@ -45,6 +45,7 @@
 			</div>
 		</nav>
 		<main>
+			<div class="dark"><div class="cross">X</div></div>
 			<div class="container" id="container">
 				<div class="comments_container">
 					<h3>Comments</h3>
